feat: adiciona configuração com o banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=pesquisae
+server.port=8090
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/pesquisae
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.tomcat.test-while-idle=true
+spring.datasource.tomcat.validation-query=SELECT 1
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
