--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,8 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:16
-    container_name: pesquisae-banco
-    restart: always
-    environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
-      POSTGRES_DB: pesquisae
+  redis:
+    image: redis:7-alpine
+    container_name: redis-cache-pesquisae
     ports:
-      - "5432:5432"
+      - "6379:6379"
