--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 spring.application.name=pesquisae
 server.port=8090
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/pesquisae
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.tomcat.test-while-idle=true
-spring.datasource.tomcat.validation-query=SELECT 1
-
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.redis.time-to-live=3600000
